force-app/main/default/objects/TBank_Complaint_SLA__c/TBank_Complaint_SLA__c.object-meta.xml
<CustomObject>
    <label>TBank Complaint SLA</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>TBank Complaint SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TBank Complaint SLA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>