force-app/main/default/objects/TBank_Complaint_SLA__c/fields/RefTicketNo__c.field-meta.xml
<CustomField>
    <fullName>RefTicketNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RefTicketNo</label>
    <length>9</length>
    <type>Text</type>
</CustomField>