force-app/main/default/objects/TBank_Complaint_SLA__c/fields/RelatedBranchOrDepartment__c.field-meta.xml
<CustomField>
    <fullName>RelatedBranchOrDepartment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsible BU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>