force-app/main/default/objects/TBank_Complaint_SLA__c/fields/TBank_Complaint_History__c.field-meta.xml
<CustomField>
    <fullName>TBank_Complaint_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TBank Complaint History</label>
    <referenceTo>TBank_Complaint_History__c</referenceTo>
    <relationshipLabel>SLA ย่อยของหน่วยงานปลายทาง</relationshipLabel>
    <relationshipName>TBank_Complaint_SLA</relationshipName>
    <type>Lookup</type>
</CustomField>